# openvolleyscout

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pipx_shared.pth  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/: FUNDING.yml
docs/: &26_Ser-CAR.dvw  2026-05-09 - - Rit - G 26 - Serie B2 Vs CARTIERA DELL'ADDA LC - 0-3.db  README.md  TEAM_ARCHIVE_ARCHITECTURE.md  advanced-datavolley-details.md  advanced-tagging.md  analytics-engine.md  architecture.md  code-structure.md  cone-to-subzone-mapping.md  data-model.md  datavolley-export.md  datavolley-import.md  developer-guidelines.md  domain-model.md  heatmaps.md  issue-8-scouting-landscape-optimization.md  libero-rules.md  live-scouting-architecture.md  live-trajectory-system.md  match-lineup-model.md  match-report-system.md  melodicspikers_hollywoodblockers.dvw  performance-dashboard.md  persistence.md  quick-scout-flow-design.md  rally-phase-classifier.md  roster-export.md  roster-import.md  scouting-guide.md  scouting-guide_it.md  scouting-modes.md  scouting-workflow.md  scouting.md  serve-reception-workflow.md  systems.md  tactical-auto-layout.md  tactical-invariants.md  trends.md  undo-system.md  (+1 more)
public/: index.html
scripts/: build-minimal-ffmpeg.sh  validate-datavolley-export.mjs  validate-datavolley-import.mjs  (+2 more)
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  rtsp_relay.rs  sidecar.rs  video_export.rs
(+541 files in other folders)
