[package]
name = "app"
version = "0.12.0"
description = "OpenVolleyScout - Volleyball scouting and analytics"
authors = ["Maurizio Napolitano"]
license = "AGPL-3.0-only"
repository = "https://github.com/napo/openvolleyscout"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
